--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,12 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Eclipse stuff
+.classpath
+.factorypath
+.project
+.settings
+
+# Directories
+/target
